[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ResolutionRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResLabel" type="Label" parent="CenterContainer/VBoxContainer/ResolutionRow"]
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullscreenRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="CenterContainer/VBoxContainer/FullscreenRow"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/FullscreenRow"]
layout_mode = 2

[node name="VsyncRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="CenterContainer/VBoxContainer/VsyncRow"]
layout_mode = 2
text = "VSync"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/VsyncRow"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ApplyButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
text = "APPLY"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
text = "BACK"